# NRS_visual

./: CMakeLists.txt  README.md  package.xml
config/ur10/: visual_parameters.yaml
launch/: load_ur.launch  load_ur10.launch  view_ur10.launch
src/: NRS_VirUR_cmd.cpp
tests/: roslaunch_test_ur10.xml
urdf/: ur.xacro  ur10.xacro
urdf/inc/: ur10_macro.xacro  ur_macro.xacro
